manifests/jarvis/librechat/librechat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-service
  namespace: jarvis
spec:
  type: NodePort
  selector:
    app: librechat
  ports:
    - name: http
      port: 3080
      targetPort: 3080
      nodePort: 30016
