manifests/jarvis/librechat/librechat-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librechat-ingressroute
  namespace: jarvis
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chat.janikhenz.ch`)
      kind: Rule
      services:
        - name: librechat-service
          port: 3080
